# MyAi-Enterprise

./: .env.example  .gitignore  CLAUDE.md  MYAI_NEW_FEATURES.md  README.md  RUN_MYAI.md  _continuous_test.py  cli_chat.py  pyproject.toml
app/: bot.py  config.py  main.py
app/admin/: __init__.py  analytics.py  datasource_routes.py  routes.py
app/agent/: core.py  intercepts.py  persona.py  prompts.py  tools.py
app/auth/: __init__.py  models.py  rbac.py  service.py
app/datasources/: base.py  local_directory.py  rest_api.py  sharepoint.py  sql_database.py
app/learning/: engine.py  feedback_service.py  routes.py
app/security/: permissions.py
app/services/: agenthub_client.py  agenthub_router.py  approval.py  audit.py  autonomy.py  briefing.py  browser_agent.py  channels.py  crew_orchestrator.py  critic.py  diary.py  doc_processor.py  encryption.py  file_watcher.py  graph.py  guardrails.py  heartbeat.py  indexing.py  journal.py  mcp_client.py  meeting_transcript.py  nexgai_client.py  planner.py  policy.py  (+6 more)
config/: agenthub_policy.yaml  guardrails_policy.yaml  policy.yaml
docs/: MyAi_AgentHub_Implementation_Plan.md  PRD_MyAi_Enterprise_v1.0.md
scripts/: load_project_context.py  sample_context.txt  simulate_transcript.py  test_200.py  test_250_quality.py  test_new_features.py  test_transcript_pipeline.py
teams-app/: manifest.json
tests/: test_admin.py  test_auth.py  test_feedback.py  test_graph.py  test_meeting_transcript.py  test_nexgai.py  test_skills.py  test_web_ui.py
web/: admin.css  admin.html  admin.js  app.js  index.html  learning.html  styles.css
(+22 files in other folders)
